tests/fixtures/positive/release-engineering/gradle-build-contains-todo/build.gradle.kts
plugins {
    kotlin("jvm") version "2.1.0"
}

dependencies {
    // TODO: finish wiring this dependency set before cutting the release.
    implementation("com.squareup.retrofit2:retrofit:2.11.0")
}
